gcc/testsuite/gm2/errors/fail/badindrtype.mod
MODULE badindrtype ;


PROCEDURE init (VAR ch: CHAR) ;
VAR
   c: CARDINAL ;
BEGIN
   ch := c
END init ;


VAR
   ch: CHAR ;
BEGIN
   init (ch)
END badindrtype.
